--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <title>Webpack App</title>
-    <link rel="stylesheet" href="./assets/sortable-theme-dark.css" />
-    <link rel="stylesheet" href="./src/styles.css" />
-    <script src="./assets/sortable.min.js"></script>
+    <link rel="stylesheet" href="/assets/sortable-theme-dark.css" />
+    <link rel="stylesheet" href="/src/styles.css" />
+    <script src="@/assets/sortable.min.js"></script>
 </head>
 
 <body>
