--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <title>Webpack App</title>
-    <link rel="stylesheet" href="homework/assets/sortable-theme-dark.css" />
-    <link rel="stylesheet" href="homework/src/styles.css" />
-    <script src="homework/assets/sortable.min.js"></script>
+    <!-- <link rel="stylesheet" href="./assets/sortable-theme-dark.css" /> -->
+    <!-- <link rel="stylesheet" href="homework/src/styles.css" /> -->
+    <!-- <script src="./assets/sortable.min.js"></script> -->
 </head>
 
 <body>
@@ -32,5 +32,144 @@
     Sortable.init()
     console.log('initted yay')
 </script> -->
+
+
+<style>
+    @import url("https://rsms.me/inter/inter.css");
+
+    * {
+        margin: 0;
+        border: 0;
+        color: rgb(218, 218, 218);
+    }
+
+    #container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        min-height: 100vh;
+
+        align-items: center;
+
+        background-color: black;
+    }
+
+    /* #container * {
+	margin: 30px;
+} */
+
+    h2,
+    h3 {
+        margin: 50px 30px 0px 30px;
+        color: white;
+        font-family: "Inter";
+    }
+
+    #the-table {
+        margin: 100px 30px;
+        width: fit-content;
+        max-width: 90%;
+        height: fit-content;
+
+        font-size: 2vmin;
+        font-family: "Inter";
+    }
+
+    #table-header-row {
+        height: 50px;
+    }
+
+    #table-header-row th {
+        width: fit-content;
+        text-align: center;
+        line-height: 0;
+    }
+
+
+    /* From sortable-theme-dark.css */
+
+    /* line 2, ../sass/_sortable.sass */
+    table[data-sortable] {
+        border-collapse: collapse;
+        border-spacing: 0;
+    }
+
+    /* line 6, ../sass/_sortable.sass */
+    table[data-sortable] th {
+        vertical-align: bottom;
+        font-weight: bold;
+    }
+
+    /* line 10, ../sass/_sortable.sass */
+    table[data-sortable] th,
+    table[data-sortable] td {
+        text-align: left;
+        padding: 10px;
+    }
+
+    /* line 14, ../sass/_sortable.sass */
+    table[data-sortable] th:not([data-sortable="false"]) {
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -o-user-select: none;
+        user-select: none;
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+        -webkit-touch-callout: none;
+        cursor: pointer;
+    }
+
+    /* line 26, ../sass/_sortable.sass */
+    table[data-sortable] th:after {
+        content: "";
+        visibility: hidden;
+        display: inline-block;
+        vertical-align: inherit;
+        height: 0;
+        width: 0;
+        border-width: 5px;
+        border-style: solid;
+        border-color: transparent;
+        margin-right: 1px;
+        margin-left: 10px;
+        float: right;
+    }
+
+    /* line 40, ../sass/_sortable.sass */
+    table[data-sortable] th[data-sorted="true"]:after {
+        visibility: visible;
+    }
+
+    /* line 43, ../sass/_sortable.sass */
+    table[data-sortable] th[data-sorted-direction="descending"]:after {
+        border-top-color: inherit;
+        margin-top: 8px;
+    }
+
+    /* line 47, ../sass/_sortable.sass */
+    table[data-sortable] th[data-sorted-direction="ascending"]:after {
+        border-bottom-color: inherit;
+        margin-top: 3px;
+    }
+
+    /* line 5, ../sass/sortable-theme-dark.sass */
+    table[data-sortable].sortable-theme-dark {
+        color: #b9b9b9;
+        background: #252525;
+    }
+
+    /* line 9, ../sass/sortable-theme-dark.sass */
+    table[data-sortable].sortable-theme-dark tbody td {
+        border-top: 1px solid #2e2e2e;
+    }
+
+    /* line 12, ../sass/sortable-theme-dark.sass */
+    table[data-sortable].sortable-theme-dark th[data-sorted="true"] {
+        background: #2e2e2e;
+    }
+</style>
+
+
 
 </html>
